26 - Ingress/2 - ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
   name: ingress-apache
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   - host: curso.prueba.com
     http:
       paths:
       - path: /apache
         backend:
           serviceName: apache
           servicePort: 80
       - path: /nginx
         backend:
           serviceName: nginx
           servicePort: 80
