26 - Ingress/3 - ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
   name: ingress-apache
   annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
   rules:
   - host: curso.prueba.com
     http:
       paths:
       - path: /
         backend:
           serviceName: apache
           servicePort: 80
